tests/fixtures/multi_module/valid/linear_chain/data_loader.furqan
bismillah DataLoader {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: load
    not_scope: nothing_excluded
}

tanzil dataloader_deps {
    depends_on: Foundation
}

fn placeholder() -> Integrity {
    return Integrity
}
