tests/fixtures/multi_module/invalid/long_cycle/b.furqan
bismillah LCB {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: second
    not_scope: nothing_excluded
}

tanzil b_deps {
    depends_on: LCC
}

fn placeholder() -> Integrity {
    return Integrity
}
